# redactly

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
docs/screenshots/: 07-how-it-works-flow-light.html  07-how-it-works-flow.html  08-detection-types-light.html  08-detection-types.html  shared-styles.css
src/: App.tsx  constants.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: clear_session.toml  export_keywords_cmd.toml  export_mappings_cmd.toml  get_auto_detect_config.toml  get_keywords.toml  get_mappings.toml  import_keywords_cmd.toml  redact.toml  remove_mapping_cmd.toml  restore.toml  save_auto_detect_config.toml  save_keywords_cmd.toml  set_workspace_dir.toml
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/engine/: keyword.rs  mod.rs  pipeline.rs  types.rs
src-tauri/src/engine/pattern/: classification.rs  compilation.rs  detection.rs  mod.rs  tests.rs
src-tauri/src/keywords/: auto_detect_store.rs  mod.rs  store.rs
src-tauri/src/session/: manager.rs  storage.rs
src/components/: CustomRuleModal.tsx  KeyboardShortcutsModal.tsx  MappingTable.tsx  RedactPanel.tsx  RestorePanel.tsx  RuleModal.tsx  Sidebar.tsx
src/components/sidebar/: AutoDetectSection.tsx  CustomRulesSection.tsx  SessionSection.tsx  index.ts
src/hooks/: useAutoDetect.ts  useKeyboardShortcuts.ts  useKeywords.ts  useRedact.ts  useTheme.ts
src/styles/: globals.css
src/utils/: colors.ts  tokens.ts
(+4 files in other folders)
