[package]
name = "redactly"
version = "0.1.0"
description = "A macOS app for redacting sensitive text"
authors = ["cowboyvang"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "redactly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
regex = "1"
strsim = "0.11"
unicode-normalization = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
